k8s/minio/04_ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`minio.keindev.ru`)
      priority: 10
      services:
        - name: minio
          namespace: minio
          port: 9001
  tls:
    secretName: local-keindev-ru-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-buckets
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`buckets.keindev.ru`)
      priority: 10
      services:
        - name: minio
          namespace: minio
          port: 9000
